# postalmaked

./: .gitignore  CMakeLists.txt  Makefile  README.txt  TODO.txt  buildtst.sh  genutils.sh  postal1.elf  postal97src.cmake  postalsaucesrc.cmake  run.sh
extras/: hoodcraft3.py
postal/: CompileOptions.h  cutscene.cpp  game.cpp  input.cpp  main.cpp  makefile  play.cpp  scene.cpp  title.cpp  title.h
postal/RSPiX/Src/BLUE/unix/: Bdisp.cpp  Bjoy.cpp  Bjoy.cpp.orig  Bkey.cpp  Bmain.cpp  Bmouse.cpp  Bmouse.cpp.orig  Btime.cpp  UnixSystem.h
postal/RSPiX/Src/GREEN/3D/: pipeline.cpp
postal/RSPiX/Src/GREEN/BLiT/: BLiTSprite.cpp  print.cpp  rotate.cpp  text.cpp
postal/RSPiX/Src/GREEN/InputEvent/: InputEvent.cpp  InputEvent.h
postal/RSPiX/Src/ORANGE/MTask/: mtask.cpp
postal/RSPiX/Src/ORANGE/RString/: rstring.h
postal/WishPiX/Menu/: menu.cpp
postal/WishPiX/ResourceManager/: resmgr.h
psauce/: .clang-format  .editorconfig  gltest.c  gltest.h  glwrap.h  pgamemode.c  pgamemode.h  pgamemode.hpp  pgm_cutscene.h  pgm_level.h  postalrenwrap.cpp  postalrenwrap.h  psauce.hpp  sauceinput.c  sauceinput.h  sauceinput.hpp
